<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8299128249632072/4958311775</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-8299128249632072/2855032816</string>
    <string name="app_name">Zenless Zone Zero Stickers - WhatsApp</string>
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="more_info_button">More info about sticker pack</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <string name="title_activity_sticker_packs_list">Sticker Packs</string>
    <string name="dot">•</string>
    <string name="title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="title_activity_sticker_pack_info">Info</string>
    <string name="view_webpage">View webpage</string>
    <string name="send_email">Send email</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="error_adding_sticker_pack">"Could not add this sticker pack. Please install the latest version of WhatsApp before adding sticker pack"</string>
    <string name="error_message">Error: %s \nSee logcat for stack trace.</string>
    <string name="title_validation_error">Error with the pack</string>
    <string name="info_screen_tray_icon">Tray icon</string>
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <string name="support_creator">Support creator</string>
    <string name="sticker_library_subtitle">Pick a pack and add it to WhatsApp</string>
    <string name="home">Home</string>
    <string name="unable_to_open_link">Unable to open this link</string>
    <string name="pack_information_subtitle">Publisher details and useful links</string>
</resources>
